Pimp org mode with symbols(bullets) and colors

--- a/config.org
+++ b/config.org
@@ -92,6 +92,7 @@
 
 #+end_src
 
+
 * Functions
 #+begin_src emacs-lisp
 
@@ -315,6 +316,31 @@
   ;;    (setq evil-ex-nohighlight t)
   ;; More configuration goes here
   )
+#+end_src
+
+** Org
+#+begin_src emacs-lisp
+  (use-package org-bullets
+    :ensure t
+    :init 
+    (setq org-bullets-bullet-list
+    '("◉" "◎" "⚫" "○" "►" "◇"))
+    :config
+    (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
+
+                                          ; Force utf8 and then change todo symbols
+  (setq locale-coding-system 'utf-8)
+  (set-terminal-coding-system 'utf-8)
+  (set-keyboard-coding-system 'utf-8)
+  (set-selection-coding-system 'utf-8)
+  (prefer-coding-system 'utf-8)
+  (when (display-graphic-p)
+    (setq x-select-request-type '(UTF8_STRING COMPOUND_TEXT TEXT STRING)))
+
+  (setq org-todo-keywords (quote((sequence "⚑ Todo" "⚐ In Progress | Waiting" "|" "✔ Done" "✘ Canceled"))))
+  (setq org-todo-keyword-faces
+        '(("⚑ Todo" . "blue") ("⚐ In Progress | Waiting" . "orange") ("✘ Canceled" . (:foreground "red"))))
+(setq org-adapt-indentation nil)
 #+end_src
 
 ** Emacs Speak Statistics (ESS)
