Comment out seemingly unneccessary line

--- a/config.org
+++ b/config.org
@@ -19,7 +19,7 @@
                            ;;("marmalade" . "http://marmalade-repo.org/packages/")
                            ))
 
-  (package-initialize) ; guess what this one does ?
+  ;; (package-initialize) ; guess what this one does ?
 
   ;; Bootstrap `use-package'
   (unless (package-installed-p 'use-package) ; unless it is already installed
