--- a/config.org
+++ b/config.org
@@ -340,6 +340,7 @@
         (quote(:foreground default :background default :scale 1.7 :html-foreground "Black" :html-background "Transparent" :html-scale 1.0 :matchers
                       ("begin" "$1" "$" "$$" "\\(" "\\["))))
       :config
+      (add-hook 'org-mode-hook 'visual-line-mode)
       (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
 
 
