--- a/config.org
+++ b/config.org
@@ -439,11 +439,11 @@
 
 ** Linum Relative
 #+begin_src emacs-lisp
-(use-package linum-relative :ensure t
-  :config
-  (global-linum-mode nil)
-  (linum-relative-toggle)
-  (setq linum-relative-current-symbol ""))
+  ;; (use-package linum-relative :ensure t
+  ;;   :config
+  ;;   (global-linum-mode nil)
+  ;;   (linum-relative-toggle)
+  ;;   (setq linum-relative-current-symbol ""))
 #+end_src
 
 ** Dashboard
