--- a/config.org
+++ b/config.org
@@ -261,6 +261,7 @@
    ;; Files
    "f" '(:ignore t :which-key "Files")
    "ff" '(counsel-find-file :which-key "find file")
+   "f." '(counsel-find-file :which-key "find file")
    "fr"	'(counsel-recentf   :which-key "recent files")
    "fs" '(save-buffer :which-key "save file")
    "f/" '(swiper :which-key "search in file")
