--- a/config.org
+++ b/config.org
@@ -67,7 +67,8 @@
   (menu-bar-mode 0)
   (tool-bar-mode 0)
   ;; (set-face-attribute 'default nil :height 120)
-  (set-default-font "Noto Sans 12")
+  ;; (set-default-font "Noto Sans 12")
+  (set-default-font "Fira Mono 12")
   ;; (set-default-font "Fira Code 12")
   ;; (set-default-font "Hack 12")
   ;; (set-default-font "Inconsolata 14")
@@ -644,10 +645,10 @@ Maps numbers to windows on screen, allows switching windows by window number
       "-" 'pdf-view-shrink
       "0" 'pdf-view-scale-reset
       "=" 'pdf-view-enlarge
-      
+
       "i" 'org-noter-insert-note
       "I" 'org-noter-insert-precise-note
-      
+
       (kbd "<C-down-mouse-1>") 'pdf-view-mouse-extend-region
       (kbd "<M-down-mouse-1>") 'pdf-view-mouse-set-region-rectangle
       (kbd "<down-mouse-1>")  'pdf-view-mouse-set-region
@@ -659,6 +660,8 @@ Maps numbers to windows on screen, allows switching windows by window number
       "zp" 'pdf-view-printer-minor-mode
       )
     )
+  (evil-define-key 'normal pdf-occur-buffer-mode-map
+    (kbd "<return>") 'pdf-occur-goto-occurrence)
 #+end_src
 
 
