--- a/config.org
+++ b/config.org
@@ -68,7 +68,9 @@
   (tool-bar-mode 0)
   ;; (set-face-attribute 'default nil :height 120)
   ;; (set-default-font "Noto Sans 12")
-  (set-default-font "Fira Mono 12")
+  ;; (set-default-font "Fira Mono 12")
+  (add-to-list 'default-frame-alist '(font . "Fira Mono 12"))
+  ;; (add-to-list 'default-frame-alist '(font . "Input Mono Light"))
   ;; (set-default-font "Fira Code 12")
   ;; (set-default-font "Hack 12")
   ;; (set-default-font "Inconsolata 14")
