--- a/config.org
+++ b/config.org
@@ -61,7 +61,14 @@
 
 
 * Appearance
-  
+
+** All the icons
+#+begin_src emacs-lisp
+  (setq load-prefer-newer t)
+  (use-package all-the-icons :ensure t)
+  ;; dont forget to M-x all-the-icons-install-fonts
+#+end_src
+
 ** General
 #+begin_src emacs-lisp
   (menu-bar-mode 0)
