--- a/config.org
+++ b/config.org
@@ -204,7 +204,11 @@
 
 * Keybindings 
 #+begin_src emacs-lisp
-(global-set-key (kbd "<escape>")      'keyboard-escape-quit) ;; send quit signal with escape
+;;(global-set-key (kbd "<escape>")      'keyboard-escape-quit) ;; send quit signal with escape
+;;(global-set-key (kbd "<escape>")      'keyboard-quit) ;; send quit signal with escape
+(define-key key-translation-map (kbd "ESC") (kbd "C-g"))
+
+;;(global-unset-key (kbd "SPC")) ;; hinders insertion of space in ins mode
 #+end_src
 
 ** General.el
