--- a/config.org
+++ b/config.org
@@ -91,6 +91,64 @@
 
 #+end_src
 
+** Modeline
+*** Diminish
+#+BEGIN_SRC emacs-lisp
+  (eval-when-compile (require 'cl))
+
+  (defvar diminish-must-not-copy-minor-mode-alist nil
+    "Non-nil means loading diminish.el won't (copy-alist minor-mode-alist).
+  Normally `minor-mode-alist' is setq to that copy on loading diminish because
+  at least one of its cons cells, that for abbrev-mode, is read-only (see
+  ELisp Info on \"pure storage\").  If you setq this variable to t & then
+  try to diminish abbrev-mode under GNU Emacs 19.34, you'll get the error
+  message \"Attempt to modify read-only object\".")
+
+  (or diminish-must-not-copy-minor-mode-alist
+      (callf copy-alist minor-mode-alist))
+
+  (defvar diminished-mode-alist nil
+    "The original `minor-mode-alist' value of all (diminish)ed modes.")
+
+  (defvar diminish-history-symbols nil
+    "Command history for symbols of diminished modes.")
+
+  (defvar diminish-history-names nil
+    "Command history for names of diminished modes.")
+
+
+  (defun diminish (mode &optional to-what)
+    "Diminish mode-line display of minor mode MODE to TO-WHAT (default \"\").
+  Interactively, enter (with completion) the name of any minor mode, followed
+  on the next line by what you want it diminished to (default empty string).
+  The response to neither prompt should be quoted.  However, in Lisp code,
+  both args must be quoted, the first as a symbol, the second as a string,
+  as in (diminish 'jiggle-mode \" Jgl\").
+  The mode-line displays of minor modes usually begin with a space, so
+  the modes' names appear as separate words on the mode line.  However, if
+  you're having problems with a cramped mode line, you may choose to use single
+  letters for some modes, without leading spaces.  Capitalizing them works
+  best; if you then diminish some mode to \"X\" but have abbrev-mode enabled as
+  well, you'll get a display like \"AbbrevX\".  This function prepends a space
+  to TO-WHAT if it's > 1 char long & doesn't already begin with a space."
+    (interactive (list (read (completing-read
+                              "Diminish what minor mode: "
+                              (mapcar (lambda (x) (list (symbol-name (car x))))
+                                      minor-mode-alist)
+                              nil t nil 'diminish-history-symbols))
+                       ))
+    (let ((minor (assq mode minor-mode-alist)))
+      (when minor
+        (progn (callf or to-what "")
+               (when (and (stringp to-what)
+                          (> (length to-what) 1))
+                 (or (= (string-to-char to-what) ?\ )
+                     (callf2 concat " " to-what)))
+               (or (assq mode diminished-mode-alist)
+                   (push (copy-sequence minor) diminished-mode-alist))
+                 (setcdr minor (list to-what))))))
+
+#+END_SRC
 ** Theme
 #+begin_src emacs-lisp
   ;;(use-package subatomic-theme :ensure t)
