Add font lock to obj properties (experimental)

--- a/config.org
+++ b/config.org
@@ -1048,23 +1048,28 @@ Maps numbers to windows on screen, allows switching windows by window number
 
 * Misc
 #+BEGIN_SRC emacs-lisp
-  (diminish 'company-mode)
-  (diminish 'abbrev-mode)
-  (diminish 'yas-minor-mode)
-  (diminish 'line-number-mode)
-  (diminish 'linum-relative-mode)
-  (diminish 'undo-tree-mode)
-  (diminish 'eldoc-mode)
-  (diminish 'tide-mode)
-  (diminish 'flycheck-mode)
-  (diminish 'evil-commentary-mode)
-  (diminish 'page-break-lines-mode)
-  (diminish 'ivy-mode)
-  (diminish 'which-key-mode)
-  (diminish 'visual-line-mode)
-  (diminish 'indent-guide-mode)
-  (diminish 'auto-revert-mode)
-  (diminish 'projectile-mode)
-  
-(define-key global-map [(S-return)] 'add-semicolon)
+    (diminish 'company-mode)
+    (diminish 'abbrev-mode)
+    (diminish 'yas-minor-mode)
+    (diminish 'line-number-mode)
+    (diminish 'linum-relative-mode)
+    (diminish 'undo-tree-mode)
+    (diminish 'eldoc-mode)
+    (diminish 'tide-mode)
+    (diminish 'flycheck-mode)
+    (diminish 'evil-commentary-mode)
+    (diminish 'page-break-lines-mode)
+    (diminish 'ivy-mode)
+    (diminish 'which-key-mode)
+    (diminish 'visual-line-mode)
+    (diminish 'indent-guide-mode)
+    (diminish 'auto-revert-mode)
+    (diminish 'projectile-mode)
+
+  (define-key global-map [(S-return)] 'add-semicolon)
+
+  (defface special-comment '((t (:foreground "#a02a2a"))) "Cyan")
+
+  (font-lock-add-keywords
+   'typescript-mode '(("\\(?:\\s_\\|\\sw\\)*:" 0 'special-comment t)))
 #+END_SRC
