--- a/config.org
+++ b/config.org
@@ -939,6 +939,8 @@ Maps numbers to windows on screen, allows switching windows by window number
       typescript-expr-indent-offset 2)
 (setq evil-shift-width 2)
 (setq typescript-indent-level 2) ; 
+(setq tide-tsserver-executable "~/.node_modules/bin/tsserver")
+
 
 ;; typescript mode specific keybindings
 (general-define-key
