--- a/config.org
+++ b/config.org
@@ -795,7 +795,8 @@ Maps numbers to windows on screen, allows switching windows by window number
       "zp" 'pdf-view-printer-minor-mode
       )
       (add-hook 'pdf-view-mode-hook 'auto-revert-mode)
-      (add-hook 'pdf-view-mode-hook (lambda () (linum-relative-mode nil)))
+      (add-hook 'pdf-view-mode-hook (lambda () (linum-relative-mode -1)))
+      (add-hook 'pdf-view-mode-hook (lambda () (linum-mode -1)))
       (add-hook 'pdf-view-mode-hook (lambda () (beacon-mode -1)))
     )
   (evil-define-key 'normal pdf-occur-buffer-mode-map
