--- a/config.org
+++ b/config.org
@@ -206,7 +206,7 @@
   (flycheck-mode +1)
   (setq flycheck-check-syntax-automatically '(save mode-enabled))
   (eldoc-mode +1)
-  (tide-hl-identifier-mode nil)
+  (tide-hl-identifier-mode -1)
   ;; company is an optional dependency. You have to
   ;; install it separately via package-install
   ;; `M-x package-install [ret] company`
@@ -455,7 +455,7 @@
 
   (setq org-todo-keywords (quote((sequence "⚑ Todo" "⚐ In Progress | Waiting" "|" "✔ Done" "✘ Canceled"))))
   (setq org-todo-keyword-faces
-        '(("⚑ Todo" . "blue") ("⚐ In Progress | Waiting" . "orange") ("✘ Canceled" . (:foreground "red"))))
+        '(("⚑ Todo" . "deep sky blue") ("⚐ In Progress | Waiting" . "orange") ("✘ Canceled" . (:foreground "red"))))
   (setq org-adapt-indentation nil)
 
   ;; Latex preview for .tex only
@@ -852,7 +852,7 @@ Maps numbers to windows on screen, allows switching windows by window number
   (use-package color-identifiers-mode 
   :ensure t
   :config 
-  (add-hook 'after-init-hook 'global-color-identifiers-mode)
+;;  (add-hook 'after-init-hook 'global-color-identifiers-mode)
   (add-to-list
    'color-identifiers:modes-alist
    `(typescript-mode . ("[^.][[:space:]]*"
@@ -868,6 +868,11 @@ Maps numbers to windows on screen, allows switching windows by window number
   ;; line below instead:
   ;; :hook (eshell-mode-hook . esh-autosuggest-mode)
   :ensure t)
+#+end_src
+
+** Rainbow
+#+begin_src emacs-lisp
+(use-package rainbow-mode :ensure t)
 #+end_src
 
 ** TemplateForNewPackage
@@ -907,6 +912,8 @@ Maps numbers to windows on screen, allows switching windows by window number
 (use-package company-tern :ensure t
   :after company
   :config
+(setenv "PATH" (concat (getenv "PATH") ":~/.node_modules/bin"))
+    (setq exec-path (append exec-path '("~/.node_modules/bin")))
   (add-to-list 'company-backends 'company-tern))
 
 (add-hook 'js2-mode-hook (lambda ()
@@ -933,7 +940,7 @@ Maps numbers to windows on screen, allows switching windows by window number
 * Typescript
 
 #+begin_src emacs-lisp
-(use-package typescript-mode :ensure t
+(use-package typescript-mode 
   :config
   (add-to-list 'auto-mode-alist '("\\.ts\\'" . typescript-mode))
   )
@@ -1096,3 +1103,25 @@ Maps numbers to windows on screen, allows switching windows by window number
   (font-lock-add-keywords
    'typescript-mode '(("\\(?:\\s_\\|\\sw\\)*:" 0 'special-comment t)))
 #+END_SRC
+;(add-to-list 'custom-theme-load-path (file-name-as-directory "~/Dev/one-light-theme/"))
+;
+;(load-theme 'one-light t t)
+;
+;(enable-theme 'one-light)
+#+END_SRC
+Status: 
+
+* ✔ Done Defining face in typescript-mode.el
+
+* ✔ Done Add face to typescript mode and match via regex
+- defface
+** ⚐ In Progress | Waiting Match face via variable
+** ⚑ Todo Provide patch to typescript.el
+
+
+* ✔ Done Match against face/font-lock keyword from color theme
+- this overwrites styles that are set from ts-mode.el
+
+  
+* ⚑ Todo Just add small modification to faces
+
